--- a/src/sdg/components/ToggleSwitch/_toggleSwitch.scss
+++ b/src/sdg/components/ToggleSwitch/_toggleSwitch.scss
@@ -50,11 +50,14 @@ $border: 1;
 }
 
 .qc-switch-label {
+  display: flex;
+  flex-grow: 1;
   margin-top: rem(3);
 }
 
 .qc-switch-label-end {
-  text-align: end;
+  justify-content: end;
+  text-align: right;
 }
 
 .qc-switch-slider {
